Adding support of changing translations language on login screen

--- a/src/pages/launcher/launcher.html
+++ b/src/pages/launcher/launcher.html
@@ -10,5 +10,5 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <page-loading [loadingSize]="'large'" [loadingMessage]="'Loading ...'"></page-loading>
+  <page-loading [loadingSize]="'large'" [loadingMessage]="'loading'|translate"></page-loading>
 </ion-content>
