--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -17,7 +17,7 @@
 
   <ion-grid>
     <div *ngIf="isLoading">
-      <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage" ></page-loading>
+      <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage|translate" ></page-loading>
     </div>
 
     <div *ngIf="!isLoading">
