--- a/src/pages/reports/reports.html
+++ b/src/pages/reports/reports.html
@@ -35,7 +35,11 @@
         <ion-col >
           <ion-list>
             <ion-item *ngFor="let report of reportList" (tap)="selectReport(report)">
-              <img *ngIf="report && report.type"  class="side-menu-icon" [src]="icons[report.type]"/>&nbsp;&nbsp;
+              <img *ngIf="report && report.type"  class="side-menu-icon" [src]="icons[report.type]"/>&nbsp;
+              <span class="circled-btn-border circled-btn">
+                <span *ngIf="report && report.type == 'dataSetReport'" >DS</span>
+                <span *ngIf="report && report.type == 'standardReport'" >SD</span>
+              </span>&nbsp;
               <span >{{ report.name }}</span>
               <ion-icon name="ios-arrow-forward"  item-right ></ion-icon>
             </ion-item>
