Adding translation on sync status in about module

--- a/src/pages/help/help.html
+++ b/src/pages/help/help.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="primary" >
-    <ion-title>Help Search</ion-title>
+    <ion-title>{{'help_search'|translate }}</ion-title>
   </ion-navbar>
 
 </ion-header>
