--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -70,13 +70,13 @@
           <div *ngIf="aboutContent.id == 'dataValues'">
             <div class="item-card" color="font-color" >
               <ion-item >
-                Synced
+                {{'synced'|translate}}
                 <ion-badge color="icon-color" item-end>{{ dataValuesStorage.online }}</ion-badge>
               </ion-item>
             </div>
             <div class="item-card" color="font-color">
               <ion-item >
-                Not Synced
+                {{'not_synced'|translate}}
                 <ion-badge color="icon-color" item-end>{{ dataValuesStorage.offline }}</ion-badge>
               </ion-item>
             </div>
@@ -84,13 +84,13 @@
           <div *ngIf="aboutContent.id == 'eventStatus'">
             <div class="item-card" color="font-color" >
               <ion-item >
-                Synced
+                {{'synced'|translate}}
                 <ion-badge color="icon-color" item-end>{{ eventsStorage.online }}</ion-badge>
               </ion-item>
             </div>
             <div class="item-card" color="font-color">
               <ion-item >
-                Not Synced
+                {{'not_synced'|translate}}
                 <ion-badge color="icon-color" item-end>{{ eventsStorage.offline }}</ion-badge>
               </ion-item>
             </div>
@@ -98,13 +98,13 @@
           <div *ngIf="aboutContent.id == 'eventForTrackerStatus'">
             <div class="item-card" color="font-color" >
               <ion-item >
-                Synced
+                {{'synced'|translate}}
                 <ion-badge color="icon-color" item-end>{{ eventsForTrackerStorage.online }}</ion-badge>
               </ion-item>
             </div>
             <div class="item-card" color="font-color">
               <ion-item >
-                Not Synced
+                {{'not_synced'|translate}}
                 <ion-badge color="icon-color" item-end>{{ eventsForTrackerStorage.offline }}</ion-badge>
               </ion-item>
             </div>
@@ -112,13 +112,13 @@
           <div *ngIf="aboutContent.id == 'enrollment'">
             <div class="item-card" color="font-color" >
               <ion-item >
-                Synced
+                {{'synced'|translate}}
                 <ion-badge color="icon-color" item-end>{{ enrollmentStorage.online }}</ion-badge>
               </ion-item>
             </div>
             <div class="item-card" color="font-color">
               <ion-item >
-                Not Synced
+                {{'not_synced'|translate}}
                 <ion-badge color="icon-color" item-end>{{ enrollmentStorage.offline }}</ion-badge>
               </ion-item>
             </div>
