--- a/src/pages/help/help.html
+++ b/src/pages/help/help.html
@@ -19,7 +19,7 @@
     <div *ngIf="isLoading">
       <ion-row>
         <ion-col >
-          <page-loading loadingSize="large" [loadingMessage]="loadingMessage|translate"></page-loading>
+          <loading loadingSize="large" [loadingMessage]="loadingMessage|translate"></loading>
         </ion-col>
       </ion-row>
     </div>
