--- a/src/pages/event-capture/event-capture-register/event-capture-register.html
+++ b/src/pages/event-capture/event-capture-register/event-capture-register.html
@@ -15,7 +15,7 @@
 <ion-content >
   <ion-grid>
     <div *ngIf="isLoading">
-      <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage|translate"></page-loading>
+      <loading [loadingSize]="'large'" [loadingMessage]="loadingMessage|translate"></loading>
     </div>
     <div *ngIf="!isLoading">
       <div *ngIf="currentEvent">
