--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -28,7 +28,7 @@
                 <ion-icon name="done-all" color="favorite"></ion-icon>
               </div>
               <div *ngIf="progressTracker.communication.passStepCount != progressTracker.communication.count">
-                <page-loading loadingSize="small"></page-loading>
+                <loading loadingSize="small"></loading>
               </div>
             </div>
             <span text-wrap *ngIf="progressTracker.communication.message !=''">
@@ -47,7 +47,7 @@
                 <ion-icon name="done-all" color="favorite"></ion-icon>
               </div>
               <div *ngIf="hasUserAuthenticated && progressTracker.entryForm.passStepCount != progressTracker.entryForm.count ">
-                <page-loading loadingSize="small"></page-loading>
+                <loading loadingSize="small"></loading>
               </div>
             </div>
             <span text-wrap *ngIf="progressTracker.entryForm.message !=''">
@@ -66,7 +66,7 @@
                 <ion-icon name="done-all" color="favorite"></ion-icon>
               </div>
               <div *ngIf="hasUserAuthenticated && progressTracker.event.passStepCount != progressTracker.event.count">
-                <page-loading loadingSize="small"></page-loading>
+                <loading loadingSize="small"></loading>
               </div>
             </div>
             <span text-wrap *ngIf="progressTracker.event.message !=''">
@@ -85,7 +85,7 @@
                 <ion-icon name="done-all" color="favorite"></ion-icon>
               </div>
               <div *ngIf="hasUserAuthenticated && progressTracker.report.passStepCount != progressTracker.report.count">
-                <page-loading loadingSize="small"></page-loading>
+                <loading loadingSize="small"></loading>
               </div>
             </div>
             <span text-wrap *ngIf="progressTracker.report.message !=''">
