Add empty message if no dashboard items as well as fixing overflow for charts

--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -54,10 +54,10 @@
             <!--end of chart visualization-->
 
             <!--table block-->
-            <app-table-list
-              *ngIf="visualizationObject.details.currentVisualization === 'TABLE'"
-              [visualizationType]="visualizationObject.type"
-              [visualizationLayers]="visualizationObject.layers"></app-table-list>
+            <!--<app-table-list-->
+              <!--*ngIf="visualizationObject.details.currentVisualization === 'TABLE'"-->
+              <!--[visualizationType]="visualizationObject.type"-->
+              <!--[visualizationLayers]="visualizationObject.layers"></app-table-list>-->
             <!--end of table block-->
           </ion-col>
         </ion-row>
