Update app translation for indonesian

--- a/src/pages/launcher/launcher.html
+++ b/src/pages/launcher/launcher.html
@@ -1,12 +1,12 @@
-<ion-content  class="login">
+<ion-content class="login">
 
   <ion-grid>
     <ion-row>
       <ion-col class="topSLogan animated slideInDown">
         <div class="logo">
-          <img [src]="logoUrl" >
+          <img [src]="logoUrl">
         </div>
-        <p >{{'innovation_in_every_dimension'|translate }}</p>
+        <p [translate]="'innovation in every dimension'"></p>
       </ion-col>
     </ion-row>
   </ion-grid>
