--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,21 +1,17 @@
-
-<ion-content  class="login">
+<ion-content class="login">
 
   <ion-grid>
     <ion-row>
       <ion-col class="topSLogan animated bounceIn">
         <div class="logo">
-          <img [src]="logoUrl" >
+          <img [src]="logoUrl">
         </div>
-        <p >{{'innovation_in_every_dimension'|translate }}</p>
+        <p [translate]="'innovation in every dimension'"></p>
       </ion-col>
     </ion-row>
     <ion-row *ngIf="isLoginProcessActive">
       <ion-col [ngClass]="animationEffect.progressBar">
-        <progress-bar
-          [progressBarTitle] = "loggedInInInstance"
-          [progressBar] = "progressBar"
-          (isProcessActive)="cancelLoginProcess($event)">
+        <progress-bar [progressBarTitle]="loggedInInInstance" [progressBar]="progressBar" (isProcessActive)="cancelLoginProcess($event)">
         </progress-bar>
       </ion-col>
     </ion-row>
@@ -23,7 +19,7 @@
       <ion-col>
         <ion-list>
           <ion-item>
-            <div style="text-align: center" item-left >
+            <div style="text-align: center" item-left>
               <div *ngIf="progressTracker.communication.passStepCount == progressTracker.communication.count">
                 <ion-icon name="done-all" color="favorite"></ion-icon>
               </div>
@@ -31,18 +27,14 @@
                 <loading loadingSize="small"></loading>
               </div>
             </div>
-            <span text-wrap *ngIf="progressTracker.communication.message !=''">
-              {{ progressTracker.communication.message|translate}}
-            </span>
-            <span text-wrap *ngIf="progressTracker.communication.message ==''">
-              {{'establishing_connection_to_server'|translate}}
-            </span>
-            <div style="text-align: center" item-right >
+            <span text-wrap *ngIf="progressTracker.communication.message !=''" [translate]="progressTracker.communication.message"></span>
+            <span text-wrap *ngIf="progressTracker.communication.message ==''" [translate]="'establishing connection to server'"></span>
+            <div style="text-align: center" item-right>
               {{ progressTracker.communication.passStepCount}}/{{ progressTracker.communication.count}}
             </div>
           </ion-item>
           <ion-item>
-            <div style="text-align: center" item-left >
+            <div style="text-align: center" item-left>
               <div *ngIf="progressTracker.entryForm.passStepCount == progressTracker.entryForm.count">
                 <ion-icon name="done-all" color="favorite"></ion-icon>
               </div>
@@ -50,18 +42,14 @@
                 <loading loadingSize="small"></loading>
               </div>
             </div>
-            <span text-wrap *ngIf="progressTracker.entryForm.message !=''">
-              {{ progressTracker.entryForm.message|translate}}
-            </span>
-            <span text-wrap *ngIf="progressTracker.entryForm.message ==''">
-              {{'aggregate_metadata'|translate}}
-            </span>
-            <div style="text-align: center" item-right >
+            <span text-wrap *ngIf="progressTracker.entryForm.message !=''" [translate]="progressTracker.entryForm.message"></span>
+            <span text-wrap *ngIf="progressTracker.entryForm.message ==''" [translate]="'aggregate metadata'"></span>
+            <div style="text-align: center" item-right>
               {{ progressTracker.entryForm.passStepCount}}/{{ progressTracker.entryForm.count}}
             </div>
           </ion-item>
           <ion-item>
-            <div style="text-align: center" item-left  >
+            <div style="text-align: center" item-left>
               <div *ngIf="progressTracker.event.passStepCount == progressTracker.event.count">
                 <ion-icon name="done-all" color="favorite"></ion-icon>
               </div>
@@ -69,18 +57,15 @@
                 <loading loadingSize="small"></loading>
               </div>
             </div>
-            <span text-wrap *ngIf="progressTracker.event.message !=''">
-              {{ progressTracker.event.message|translate}}
+            <span text-wrap *ngIf="progressTracker.event.message !=''" [translate]="progressTracker.event.message"></span>
+            <span text-wrap *ngIf="progressTracker.event.message ==''" [translate]="'Event and tracker metadata'">
             </span>
-            <span text-wrap *ngIf="progressTracker.event.message ==''">
-              {{'Event_and_tracker_metadata'|translate}}
-            </span>
-            <div style="text-align: center" item-right >
+            <div style="text-align: center" item-right>
               {{ progressTracker.event.passStepCount}}/{{ progressTracker.event.count}}
             </div>
           </ion-item>
           <ion-item>
-            <div style="text-align: center" item-left >
+            <div style="text-align: center" item-left>
               <div *ngIf="progressTracker.report.passStepCount == progressTracker.report.count">
                 <ion-icon name="done-all" color="favorite"></ion-icon>
               </div>
@@ -88,13 +73,9 @@
                 <loading loadingSize="small"></loading>
               </div>
             </div>
-            <span text-wrap *ngIf="progressTracker.report.message !=''">
-              {{ progressTracker.report.message|translate}}
-            </span>
-            <span text-wrap *ngIf="progressTracker.report.message ==''">
-              {{'report_metadata'|translate }}
-            </span>
-            <div style="text-align: center" item-right >
+            <span text-wrap *ngIf="progressTracker.report.message !=''" [translate]="progressTracker.report.message"></span>
+            <span text-wrap *ngIf="progressTracker.report.message ==''" [translate]="'report metadata'"></span>
+            <div style="text-align: center" item-right>
               {{ progressTracker.report.passStepCount}}/{{ progressTracker.report.count}}
             </div>
           </ion-item>
@@ -109,48 +90,45 @@
         <ion-row>
           <ion-col>
             <div class="round-form-container">
-              <available-local-instance
-                (onClose)="toggleLoginFormAndLocalInstances()"
-                (onSelectCurrentUser)="changeCurrentUser($event)" ></available-local-instance>
+              <available-local-instance (onClose)="toggleLoginFormAndLocalInstances()" (onSelectCurrentUser)="changeCurrentUser($event)"></available-local-instance>
             </div>
           </ion-col>
         </ion-row>
       </div>
       <div *ngIf="!isLocalInstancesListOpen">
-        <form (ngSubmit)="startLoginProcess()" [ngClass]="animationEffect.loginForm" >
-          <ion-row >
-            <ion-col >
+        <form (ngSubmit)="startLoginProcess()" [ngClass]="animationEffect.loginForm">
+          <ion-row>
+            <ion-col>
               <div class="round-form-container">
                 <ion-item>
-                  <ion-input [(ngModel)]="currentUser.serverUrl" type="text" name ="serverUrl" placeholder="{{'enter_server_address'|translate}}"></ion-input>
+                  <ion-input [(ngModel)]="currentUser.serverUrl" type="text" name="serverUrl" placeholder="{{'enter_server_address'|translate}}"></ion-input>
                 </ion-item>
 
                 <ion-item>
-                  <ion-input [(ngModel)]="currentUser.username" type="text" name ="username" placeholder="{{'enter_username'|translate}}"></ion-input>
+                  <ion-input [(ngModel)]="currentUser.username" type="text" name="username" placeholder="{{'enter_username'|translate}}"></ion-input>
                 </ion-item>
 
                 <ion-item>
-                  <ion-input [(ngModel)]="currentUser.password" name ="password" type="password" placeholder="{{'enter_password'|translate}}"></ion-input>
+                  <ion-input [(ngModel)]="currentUser.password" name="password" type="password" placeholder="{{'enter_password'|translate}}"></ion-input>
                 </ion-item>
               </div>
             </ion-col>
           </ion-row>
 
-          <ion-row >
+          <ion-row>
             <ion-col>
               <button type="submit" class="normalButton" ion-button full text-capitalize>
-                {{'login'|translate}}
+                <span [translate]="'login'"></span>
               </button>
             </ion-col>
           </ion-row>
         </form>
         <div *ngIf="localInstances && localInstances.length > 1">
           <div class="strike">
-            <span >{{'or'|translate}}</span>
+            <span [translate]="'or'"></span>
           </div>
-          <button ion-button block clear color="light" text-capitalize (click)="toggleLoginFormAndLocalInstances()" >
-            <img  class="side-menu-icon" [src]="offlineIcon"/>&nbsp;&nbsp;
-            {{'offline_instances'|translate}}
+          <button ion-button block clear color="light" text-capitalize (click)="toggleLoginFormAndLocalInstances()">
+            <img class="side-menu-icon" [src]="offlineIcon" [translate]="'offline instances'" />&nbsp;&nbsp;
           </button>
         </div>
       </div>
@@ -165,12 +143,15 @@
       <ion-col class="bottomSLogan">
         <p>
           <span class="translation-codes">
-          <span (click)="updateTranslationLanguage('en')" [ngClass]="(currentLanguage == 'en') ?'currentLang' : ''">en</span>&nbsp;|&nbsp;
-          <span (click)="updateTranslationLanguage('fr')" [ngClass]="(currentLanguage == 'fr') ?'currentLang' : ''">fr</span>&nbsp;|&nbsp;
-          <span (click)="updateTranslationLanguage('pt')"[ngClass]="(currentLanguage == 'pt') ?'currentLang' : ''">pt</span>
-        </span>
+            <span (click)="updateTranslationLanguage('en')" [ngClass]="(currentLanguage == 'en') ?'currentLang' : ''">en</span>&nbsp;|&nbsp;
+            <span (click)="updateTranslationLanguage('fr')" [ngClass]="(currentLanguage == 'fr') ?'currentLang' : ''">fr</span>&nbsp;|&nbsp;
+            <span (click)="updateTranslationLanguage('id')" [ngClass]="(currentLanguage == 'id') ?'currentLang' : ''">id</span>&nbsp;|&nbsp;
+            <span (click)="updateTranslationLanguage('pt')" [ngClass]="(currentLanguage == 'pt') ?'currentLang' : ''">pt</span>
+          </span>
         </p>
-        <p><span class="bottom-sLogan-title">{{'powered_by'|translate}} HISPTZ </span></p>
+        <p>
+          <span class="bottom-sLogan-title" [translate]="'powered by'">HISPTZ </span>
+        </p>
       </ion-col>
     </ion-row>
   </ion-grid>
